# precision-desktop

./: .gitignore  README.md  calibration.py  find_element.py  health_check.py  pyproject.toml  server.json  server.py
patches/: windows_mcp.py
