[project]
name = "precision-desktop"
version = "0.1.0"
description = "MCP server that fixes DPI coordinate scaling for Windows desktop automation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ian Koskela" },
]
keywords = ["mcp", "windows", "dpi", "desktop-automation", "ui-automation", "coordinates"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ikoskela/precision-desktop"
Repository = "https://github.com/ikoskela/precision-desktop"
Issues = "https://github.com/ikoskela/precision-desktop/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
